Site logo fit with first menu item so as to avoid overlap.
An anchor does not seem to take a z-index well.

--- a/sass/uhd.global.styles.scss
+++ b/sass/uhd.global.styles.scss
@@ -1617,6 +1617,7 @@ ul.action-links {
  * "Main menu" block
  */
 #block-system-main-menu {
+  padding-top: 20px;
   background-color: lighten($grey_dark_very, 8%);
 
   // top level menu
@@ -1661,6 +1662,10 @@ ul.action-links {
             @include sprites-sprite(menu-down-white, $dimensions: true);
           }
         }
+      }
+
+      &.first.menu-depth-1 a {
+        border-top: 1px solid $grey_dark_very;
       }
 
       // second level menus
